# moodle-quiz-archive-worker

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  FUNDING.yml  README.md  config.py  custom_types.py  docker-compose.yml  main.py  moodle-quiz-archive-worker.py  pyproject.toml  quiz_archive_job.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-build-and-push-releases.yml  pytest.yml
archiveworker/: config.py  custom_types.py  interruptable_thread.py  moodle_api.py  moodle_quiz_archive_worker.py  quiz_archive_job.py  requests_factory.py
archiveworker/api/moodle/: __init__.py  archivingmod_quiz.py  base.py  quiz_archiver.py
archiveworker/api/worker/: __init__.py  archive_job_descriptor.py  archive_request.py  archivingmod_quiz.py  quiz_archiver.py
archiveworker/type/: __init__.py  job_status.py  moodle_backup_status.py  paper_format.py  report_signal.py  worker_status.py  worker_thread_interrupter.py
res/: demomode.js  readysignal.js
tests/: conftest.py  test_api.py  test_basic_api.py  test_config.py  test_demomode.py  test_proxy_detection.py  test_quiz_archive_job.py  test_requests_factory.py
tests/fixtures/: __init__.py  empty_job.py  reference_quiz_full.py  reference_quiz_single_attempt.py  reference_quiz_single_attempt_no_backups.py
tests/fixtures/quiz_archiver/: __init__.py  empty_job.py  reference_quiz_full.py  reference_quiz_single_attempt.py  reference_quiz_single_attempt_no_backups.py  reference_quiz_two_attempts_foldername_collision.py
tests/resources/reference_quiz_full/: attempts_metadata.csv
tests/resources/reference_quiz_full/attempts/: 23.html  24.html  25.html
tests/resources/reference_quiz_full/backups/: quiz_archiver-activity-backup-23.mbz  quiz_archiver-course-backup-9.mbz
