[tool.poetry]
name = "moodle-quiz-archive-worker"
version = "1.3.8"
description = "Quiz archiver service to work in conjunction with the Moodle plugin 'quiz_archiver'"
authors = ["Niels Gandraß <niels@gandrass.de>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
playwright = "^1.44"
requests = "^2.32"
waitress = "^3.0"
pytest = "^8.0.0"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["archiveworker"]
